Adding comment on block for html5 element styling

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             width: 100%;
         }
 
+        /* for compat with older browsers that don't understand html 5 semantic elements */
         header,
         section,
         footer,
