Add images to page"

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             margin-left: auto;
             margin-right: auto;
             background-color: #e6e4d9;
+            background-image: url('images/pattern.png');
         }
 
         #mainheader {
@@ -67,10 +68,14 @@
   </head>
   <body>
     <header id="mainheader">
-        <nav>Header goes here</nav>
+        <nav>
+            <!-- <img src="images/pie.png" height="55"/> -->
+            <img src="images/cake.svg" height="55"/>
+        </nav>
     </header>
     <div style="width:1000px;margin-left: auto;margin-right:auto;">
         <aside id="leftmenu">
+            <img src="images/bethanylogo.png">
             <header>
                 <h4 style="text-align: center;">Browse our pies</h4>
             </header>
@@ -79,6 +84,7 @@
         <main id="main">
             <article>
                 <header><h1>Welcome to Bethany's Pie Shop!</h1></header>
+                <img src="images/bethany.jpg" width="700" alt="Bethany in her pie shop">
                 <h2>Our history</h2>
             <p>
             For many years, Bethany has been baking the most delicious pies at her
