Add figure and caption

--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
         <main id="main">
             <article>
                 <header><h1>Welcome to Bethany's Pie Shop!</h1></header>
-                <img src="images/bethany.jpg" width="700" alt="Bethany in her pie shop">
+                <figure>
+                    <img src="images/bethany.jpg" width="700" alt="Bethany in her pie shop">
+                    <figcaption>Bethany in her pie shop</figcaption>
+                </figure>
                 <h2>Our history</h2>
             <p>
             For many years, Bethany has been baking the most delicious pies at her
