Add menus and other links

--- a/applepie.html
+++ b/applepie.html
@@ -71,7 +71,11 @@
     <header id="mainheader">
         <nav>
             <!-- <img src="images/pie.png" height="55"/> -->
-            <img src="images/cake.svg" height="55"/>
+            <ul>
+                <li><img src="images/cake.svg" height="55"/></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pieoverview.html">All pies</a></li>
+            </ul>
         </nav>
     </header>
     <div style="width:1000px;margin-left: auto;margin-right:auto;">
@@ -80,11 +84,18 @@
             <header>
                 <h4 style="text-align: center;">Browse our pies</h4>
             </header>
+            <ul>
+                <li><a href="pieoverview.html">All pies</a></li>
+                <li><a href="cheesecakes.html">Cheese cakes</a></li>
+                <li><a href="fruitpies.html">Fruit pies</a></li>
+                <li><a href="seasonalpies.html">Seasonal pies</a></li>
+                <li><a href="#promos">Promotions</a></li>
+            </ul>
             <input type="search" class="searchbox" placeholder="Search our store">
         </aside>
         <main id="main">
             <figure>
-                <img src="images/products/applepie.jpg" alt="Apple pie" width="600">
+                <a href="images/products/applepie.jpg" target="_blank"><img src="images/products/applepie.jpg" alt="Apple pie" width="600"></a>
                 <figcaption>Our world-famous apple pie</figcaption>
             </figure>
             <div style="background-color: #f8f4f1; padding: 5px 0px 10px 10px;">
