--- a/template.html
+++ b/template.html
@@ -71,7 +71,11 @@
     <header id="mainheader">
         <nav>
             <!-- <img src="images/pie.png" height="55"/> -->
-            <img src="images/cake.svg" height="55"/>
+            <ul>
+                <li><img src="images/cake.svg" height="55"/></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pieoverview.html">All pies</a></li>
+            </ul>
         </nav>
     </header>
     <div style="width:1000px;margin-left: auto;margin-right:auto;">
@@ -80,6 +84,13 @@
             <header>
                 <h4 style="text-align: center;">Browse our pies</h4>
             </header>
+            <ul>
+                <li><a href="pieoverview.html">All pies</a></li>
+                <li><a href="cheesecakes.html">Cheese cakes</a></li>
+                <li><a href="fruitpies.html">Fruit pies</a></li>
+                <li><a href="seasonalpies.html">Seasonal pies</a></li>
+                <li><a href="#promos">Promotions</a></li>
+            </ul>
             <input type="search" class="searchbox" placeholder="Search our store">
         </aside>
         <main id="main">
@@ -87,6 +98,7 @@
         </main>
         <footer>
             <p>Our address is <address>Bethany's Pie Shop - Bakery Street 555 Brussels Belgium</address></p>
+            <p>Contact us via <a href="mailto:info@bethanyspieshop.com">email</a></p>
             <small>2023 Bethany's Pie Shop - All rights reserved</small>
         </footer>
     </div>
