--- a/index.html
+++ b/index.html
@@ -65,21 +65,51 @@
         figure {
             display: block;
         }
+
+        nav>ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        nav>ul>li {
+            float:left;
+        }
+
+        nav>ul>li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 16px;
+            text-decoration: none;
+            font-weight: bold;
+        }
     </style>
   </head>
   <body>
     <header id="mainheader">
         <nav>
             <!-- <img src="images/pie.png" height="55"/> -->
-            <img src="images/cake.svg" height="55"/>
+            <ul>
+                <li><img src="images/cake.svg" height="55"/></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pieoverview.html">All pies</a></li>
+            </ul>
         </nav>
     </header>
     <div style="width:1000px;margin-left: auto;margin-right:auto;">
         <aside id="leftmenu">
-            <img src="images/bethanylogo.png">
+            <a href="index.html"><img src="images/bethanylogo.png"></a>
             <header>
                 <h4 style="text-align: center;">Browse our pies</h4>
             </header>
+            <ul>
+                <li><a href="pieoverview.html">All pies</a></li>
+                <li><a href="cheesecakes.html">Cheese cakes</a></li>
+                <li><a href="fruitpies.html">Fruit pies</a></li>
+                <li><a href="seasonalpies.html">Seasonal pies</a></li>
+                <li><a href="#promos">Promotions</a></li>
+            </ul>
             <input type="search" class="searchbox" placeholder="Search our store">
         </aside>
         <main id="main">
@@ -107,8 +137,9 @@
             Bethany is famous for using only the best ingredients. This way, we can
             make sure that our pies are absolutely the best.
             </p>
+            <p>Download our full <a href="downloads/Price list.zip">price list</a></p>
             </article>
-            <section>
+            <section id="promos">
                 <h3>Our weekly promotions</h3>
                 <h4>Cheese cake</h4>
                 $12.95 - serves 4<br>
@@ -117,7 +148,9 @@
         </main>
         <footer>
             <p>Our address is <address>Bethany's Pie Shop - Bakery Street 555 Brussels Belgium</address></p>
+            <p>Contact us via <a href="mailto:info@bethanyspieshop.com">email</a></p>
             <small>2023 Bethany's Pie Shop - All rights reserved</small>
+            <p><small><a href="https://www.snowball.be">Created by Snowball</a></small></p>
         </footer>
     </div>
   </body>
